examples/test/testpolicy5242.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5242
  namespace: namespace147
spec:
  podSelector:
    matchLabels:
      key34: value26
      key31: value5
      key25: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value7
          key15: value4
          key46: value12
      podSelector:
        matchLabels:
          key12: value0
          key9: value42
          key11: value34
